[Full] fix: 로그인 처리 오류 수정 front api 수정